metadata/force-app/main/default/objects/Region_Sub_Region__mdt/Region_Sub_Region__mdt.object-meta.xml
<CustomObject>
    <label>Region &amp; Sub Region</label>
    <pluralLabel>Region &amp; Sub Regions</pluralLabel>
</CustomObject>