metadata/force-app/main/default/objects/Region_Sub_Region__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>DACH</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>MEA</fullName>
            </value>
            <value>
                <fullName>Northern Europe</fullName>
            </value>
            <value>
                <fullName>Rest of Europe</fullName>
            </value>
            <value>
                <fullName>Southern Europe</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>US/CA</fullName>
            </value>
            <value>
                <fullName>Benelux</fullName>
                <isActive>false</isActive>
                <label>Benelux</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>